--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
 
       <h1><span>We are launching </span><strong>soon!</strong></h1>
-      <p style="color:rgb(182, 181, 255); font-size:15px">This AstraCode IDE Project is under construction Under
+      <p style="color:rgb(182, 181, 255); font-size:15px">This AstraCode IDE Project is Under
         construction. Powered by CodeINBlogs</p>
       <p>CodeINBlogs team is actively developing the AstraCode IDE. Subscribe to our mailing list for updates on our
         progress and the upcoming launch!</p>
