--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header>
       <div class="logos">
         <img src="./CodeINBlogs-New.png" alt="logo" class=" CodeINBlogs-logo logo">
-        <img src="./Astracode.png" alt="logo" class=" AstraCode-logo logo">
+        <img src="./ASTRACODE.png" alt="logo" class=" AstraCode-logo logo">
 
       </div>
 
